Added an Education section

--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="mx-auto flex-sm-nowrap">
       <ul class="navbar-nav nav">
-        <li class="nav-item">
           <a class="nav-link" href="#AboutMe">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#Experience">Work Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#AboutMe">Education</a>
+          <a class="nav-link" href="#Education">Education</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#AboutMe">Skills</a>
@@ -62,7 +61,9 @@
         <h1 class="text.center">Joshua Hollander</h1>
       </div>
     </div>
-<hr>
+
+    <hr>
+
     <div class="container" id="AboutMe">
       <h2 class="row align-items-center justify-content-center">About Me</h2>
       <div class="row" style="padding-top: 10px">
@@ -74,74 +75,13 @@
           Science with a certificate (Madison-talk for a minor) in Mathematics.
         </div>
       </div>
-<hr>
+
+      <hr>
+
       <div class="container" id="Experience">
         <h2 class="row align-items-center justify-content-center">Work Experience</h2>
         <div class="section top-margin">
           <ul class="list-group">
-            <div class="list-group-item" id="Walmart">
-              <div class="d-flex">
-                <div class="mr-auto p-2">
-                  <div class="col">
-                    <div class="row">
-                      <strong>Cashier</strong>
-                    </div>
-                    <div class="row">
-                      Walmart
-                    </div>
-                  </div>
-                </div>
-                <div class="p-2">1 year</div>
-              </div>
-              <ul class="list-group-flush">
-                <li class="list-group-item">Assisted customers with inquiries and issues while providing excellent
-                  customer service</li>
-                <li class="list-group-item">Utilized quick thinking to promptly solve unexpected problems (primarily
-                  technical)</li>
-              </ul>
-            </div>
-            <div class="list-group-item" id="StephenEdwardGraphics">
-              <div class="d-flex">
-                <div class="mr-auto p-2">
-                  <div class="col">
-                    <div class="row">
-                      <strong>Post Production Assistant</strong>
-                    </div>
-                    <div class="row">
-                      Stephen Edward Graphics
-                    </div>
-                  </div>
-                </div>
-                <div class="p-2">1 year</div>
-              </div>
-              <ul class="list-group-flush">
-                <li class="list-group-item">Assisted production of vinyl decal creation through Adobe Illustrator on
-                  OSX, alongside cutting, peeling, applying transfer tape, and trimming decals</li>
-                <li class="list-group-item">Worked with decals that required immense attention to detail</li>
-                <li class="list-group-item">Assisted with the packaging and shipment of online orders</li>
-                <li class="list-group-item">Demonstrated and improved time management skills</li>
-              </ul>
-            </div>
-            <div class="list-group-item" id="FourLakesMarket">
-              <div class="d-flex">
-                <div class="mr-auto p-2">
-                  <div class="col">
-                    <div class="row">
-                      <strong>Food Preparer</strong>
-                    </div>
-                    <div class="row">
-                      Four Lakes Market
-                    </div>
-                  </div>
-                </div>
-                <div class="p-2">1 year</div>
-              </div>
-              <ul class="list-group-flush">
-                <li class="list-group-item">Maintained and improved excellent customer service skills</li>
-                <li class="list-group-item">Utilized skills that required me to be detailed oriented and work in a
-                  fast-paced environment</li>
-              </ul>
-            </div>
             <div class="list-group-item" id="PostProdAssist">
               <div class="d-flex">
                 <div class="mr-auto p-2">
@@ -154,7 +94,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="p-2">1 year</div>
+                <div class="p-2">July 2018 - Current</div>
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">Manage both digital and physical file collections/databases of previously
@@ -186,7 +126,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="p-2">1 year</div>
+                <div class="p-2">May 2019 - August 2019</div>
               </div>
               <ul class="list-group-flush">
                 <li class="list-group-item">Assisted with the migration of 1,500+ PDF publication files, each of which
@@ -205,10 +145,117 @@
                   custom template platform)</li>
               </ul>
             </div>
+            <div class="list-group-item" id="FourLakesMarket">
+              <div class="d-flex">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
+                      <strong>Food Preparer</strong>
+                    </div>
+                    <div class="row">
+                      Four Lakes Market
+                    </div>
+                  </div>
+                </div>
+                <div class="p-2">August 2017 - May 2018</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Maintained and improved excellent customer service skills</li>
+                <li class="list-group-item">Utilized skills that required me to be detailed oriented and work in a
+                  fast-paced environment</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="StephenEdwardGraphics">
+              <div class="d-flex">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
+                      <strong>Post Production Assistant</strong>
+                    </div>
+                    <div class="row">
+                      Stephen Edward Graphics
+                    </div>
+                  </div>
+                </div>
+                <div class="p-2">August 2016 - August 2017</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Assisted production of vinyl decal creation through Adobe Illustrator on
+                  OSX, alongside cutting, peeling, applying transfer tape, and trimming decals</li>
+                <li class="list-group-item">Worked with decals that required immense attention to detail</li>
+                <li class="list-group-item">Assisted with the packaging and shipment of online orders</li>
+                <li class="list-group-item">Demonstrated and improved time management skills</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="Walmart">
+              <div class="d-flex">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
+                      <strong>Cashier</strong>
+                    </div>
+                    <div class="row">
+                      Walmart
+                    </div>
+                  </div>
+                </div>
+                <div class="p-2">May 2015 - August 2016</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Assisted customers with inquiries and issues while providing excellent
+                  customer service</li>
+                <li class="list-group-item">Utilized quick thinking to promptly solve unexpected problems (primarily
+                  technical)</li>
+              </ul>
+            </div>
           </ul>
         </div>
       </div>
-    </div>
+
+      <hr>
+
+      <div class="container" id="Education">
+        <h2 class="row align-items-center justify-content-center top">Education</h2>
+        <div class="section top-margin">
+          <ul class="list-group">
+            <div class="list-group-item" id="UWMad">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row">
+                    <strong>Bachelor of Science in Computer Science + Mathematics Certificate</strong>
+                  </div>
+                  <div class="row">
+                    University of Wisconsin-Madison
+                  </div>
+                  <div class="row">
+                    GPA: 2.8
+                  </div>
+                </div>
+                <div class="p-2">2017 - Anticipated Grad. in 2021</div>
+              </div>
+            </div>
+            <div class="list-group-item" id="HS">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row">
+                    <strong>High School Diploma</strong>
+                  </div>
+                  <div class="row">
+                    Cirrus High School
+                  </div>
+                  <div class="row">
+                    GPA: 3.8
+                  </div>
+                </div>
+                <div class="p-2">2013 - 2017</div>
+              </div>
+            </div>
+          </ul>
+        </div>
+
+        <hr>
+
+      </div>
 </body>
 
 </html>
