Added a Resume and changed the navbar

--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="mx-auto flex-sm-nowrap">
       <ul class="navbar-nav nav">
-          <a class="nav-link" href="#AboutMe">About Me</a>
+          <a class="nav-link" href="#main-container">Homepage</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Experience">Work Experience</a>
+          <a class="nav-link" target="_blank" type="application/pdf" href="/Resume.pdf">Resume</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Education">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#AboutMe">Skills</a>
+          <a class="nav-link" target="_blank" href="https://github.com/stucco11">GitHub</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
@@ -49,7 +46,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Me</a>
+          <a class="nav-link" href="mailto:stuccoeleven@gmail.com">Email</a>
         </li>
       </ul>
     </div>
