--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="mx-auto flex-sm-nowrap">
       <ul class="navbar-nav nav">
-          <a class="nav-link" href="#main-container">Homepage</a>
+        <a class="nav-link" href="#main-container">Homepage</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" target="_blank" type="application/pdf" href="/Resume.pdf">Resume</a>
@@ -61,20 +61,7 @@
 
     <hr>
 
-    <div class="container" id="AboutMe">
-      <h2 class="row align-items-center justify-content-center">About Me</h2>
-      <div class="row" style="padding-top: 10px">
-        <div class="col-4">
-          <img src="pic.jpg" class="rounded float-left"
-            style="width: 200px; box-shadow: 0px 4px 8px gray; margin-right: 10px" />
-        </div>
-        <div class="col-8">I'm a Junior currently enrolled at the University of Wisconsin-Madison majoring in Computer
-          Science with a certificate (Madison-talk for a minor) in Mathematics.
-        </div>
-      </div>
-
-      <hr>
-
+    <div class="container">
       <div class="container" id="Experience">
         <h2 class="row align-items-center justify-content-center">Work Experience</h2>
         <div class="section top-margin">
@@ -249,10 +236,89 @@
             </div>
           </ul>
         </div>
-
-        <hr>
-
       </div>
+
+      <hr>
+
+      <div class="container" id="TechnicalKnowledge">
+        <h2 class="row align-items-center justify-content-center">Technical Knowledge</h2>
+        <div class="section top-margin">
+          <ul class="list-group">
+            <div class="list-group-item" id="ProgSkills">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row bottom-margin">
+                    <strong>Systems Programming</strong>
+                  </div>
+                </div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Java / JavaFX</li>
+                <li class="list-group-item">C#</li>
+                <li class="list-group-item">XAML</li>
+                <li class="list-group-item">WPF (Alongside the MVVM pattern)</li>
+                <li class="list-group-item">Visual Basic</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="WebDev">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row bottom-margin">
+                    <strong>Web Development</strong>
+                  </div>
+                </div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">HTML / CSS</li>
+                <li class="list-group-item">JavaScript</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="OtherSkills">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row bottom-margin">
+                    <strong>Other Languages</strong>
+                  </div>
+                </div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">SQL</li>
+                <li class="list-group-item">Liquid (Shopify's template language)</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="VersionControl">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row bottom-margin">
+                    <strong>Version Control</strong>
+                  </div>
+                </div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Git / GitHub</li>
+                <li class="list-group-item">Azure DevOps</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="OS">
+              <div class="d-flex">
+                <div class="col">
+                  <div class="row bottom-margin">
+                    <strong>Operating Systems</strong>
+                  </div>
+                </div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Windows XP through 10 (used extensively)</li>
+                <li class="list-group-item">Mac OSX (used extensively)</li>
+              </ul>
+            </div>
+          </ul>
+        </div>
+      </div>
+
+      <hr>
+
+    </div>
 </body>
 
 </html>
