--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="mx-auto flex-sm-nowrap">
       <ul class="navbar-nav nav">
-        <a class="nav-link" href="#main-container">Homepage</a>
+        <a class="nav-link" href="#main-container">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" target="_blank" type="application/pdf" href="/Resume.pdf">Resume</a>
@@ -36,6 +36,7 @@
         <li class="nav-item">
           <a class="nav-link" target="_blank" href="https://github.com/stucco11">GitHub</a>
         </li>
+        <!--
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
             aria-expanded="false">Projects</a>
@@ -45,6 +46,7 @@
             <a class="dropdown-item" href="#">Separated link</a>
           </div>
         </li>
+        -->
         <li class="nav-item">
           <a class="nav-link" href="mailto:stuccoeleven@gmail.com">Email</a>
         </li>
