--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
               <ul class="list-group-flush">
                 <li class="list-group-item">Assisted with the migration of 1,500+ PDF publication files, each of which
                   must align with its product page counterpart</li>
-                <li class="list-group-item">Used HTML and CSS to assist with badging, branding, and visual design of
+                <li class="list-group-item">Used HTML5 and CSS to assist with badging, branding, and visual design of
                   individual product pages to align the Learning Store’s user interface with UW–Madison’s web guidelines
                   and update catalog entries with legacy formatting</li>
                 <li class="list-group-item">Scouted the Learning Store catalog and publication pages for consistency in
-                  HTML formatting</li>
-                <li class="list-group-item">Ensured 301 redirects for URLs were functioning correctly</li>
+                  HTML5 formatting</li>
+                <li class="list-group-item">Ensured 301 (moved permanently) redirects for URLs were functioning correctly</li>
                 <li class="list-group-item">Used Adobe CC to craft graphics and other marketing pieces for use on the
                   Learning Store’s Shopify homepage and social media pages to promote new and revised publications</li>
                 <li class="list-group-item">Worked closely with the Publishing Unit’s off-site warehouse to coordinate,
                   modify, and adjust Shopify email notifications for order fulfillment</li>
-                <li class="list-group-item">Created a custom invoicing sheet utilizing HTML, CSS, and Liquid (Shopify's
+                <li class="list-group-item">Created a custom invoicing sheet utilizing HTML5, CSS, and Liquid (Shopify's
                   custom template platform)</li>
               </ul>
             </div>
@@ -271,7 +271,7 @@
                 </div>
               </div>
               <ul class="list-group-flush">
-                <li class="list-group-item">HTML / CSS</li>
+                <li class="list-group-item">HTML5 / CSS</li>
                 <li class="list-group-item">JavaScript</li>
               </ul>
             </div>
@@ -297,7 +297,8 @@
                 </div>
               </div>
               <ul class="list-group-flush">
-                <li class="list-group-item">Git / GitHub</li>
+                <li class="list-group-item">Git</li>
+                <li class="list-group-item">GitHub</li>
                 <li class="list-group-item">Azure DevOps</li>
               </ul>
             </div>
