Fixed collapsable menu

--- a/index.html
+++ b/index.html
@@ -24,44 +24,44 @@
 
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="mx-auto flex-sm-nowrap">
-      <ul class="navbar-nav nav">
+<header>
+ <!-- Navbar -->
+ <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+   
+ <div class="container">
+  <a class="navbar-brand" href="#">Joshua Hollander</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
         <a class="nav-link" href="#main-container">Homepage</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" target="_blank" type="application/pdf" href="/Resume.pdf">Resume</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" target="_blank" href="https://github.com/stucco11">GitHub</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-            aria-expanded="false">Projects</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Game Shelf</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="mailto:stuccoeleven@gmail.com">Email</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#projects">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" target="_blank" href="https://github.com/stucco11">GitHub</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/joshua-hollander/">LinkedIn</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="mailto:stuccoeleven@gmail.com">Email</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" target="_blank" type="application/pdf" href="/Resume.pdf">Resume</a>
+      </li>
+    </ul>
+  </div>
+</div>
+</nav>
+</header>
 
+<body>
   <div id="main-container" class="container">
-    <div class="container">
-      <div class="row align-items-center justify-content-center">
-        <h1 class="text.center">Joshua Hollander</h1>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="container">
+        <div class="container">
       <div class="container" id="Experience">
         <h2 class="row align-items-center justify-content-center">Work Experience</h2>
         <div class="section top-margin">
@@ -198,8 +198,8 @@
 
       <hr>
 
-      <div class="container" id="Education">
-        <h2 class="row align-items-center justify-content-center top">Education</h2>
+      <div class="container" id="UWMad">
+        <h2 class="row align-items-center justify-content-center top">University of Wisconsin - Madison</h2>
         <div class="section top-margin">
           <ul class="list-group">
             <div class="list-group-item" id="UWMad">
@@ -209,29 +209,18 @@
                     <strong>Bachelor of Science in Computer Science + Mathematics Certificate</strong>
                   </div>
                   <div class="row">
-                    University of Wisconsin-Madison
-                  </div>
-                  <div class="row">
-                    GPA: 2.8
+                    GPA: 2.9
                   </div>
                 </div>
                 <div class="p-2">2017 - Anticipated Grad. in 2021</div>
               </div>
-            </div>
-            <div class="list-group-item" id="HS">
+              <hr>
               <div class="d-flex">
                 <div class="col">
                   <div class="row">
-                    <strong>High School Diploma</strong>
-                  </div>
-                  <div class="row">
-                    Cirrus High School
-                  </div>
-                  <div class="row">
-                    GPA: 3.8
+                  <strong>Relavent Coursework</strong>
                   </div>
                 </div>
-                <div class="p-2">2013 - 2017</div>
               </div>
             </div>
           </ul>
