Fixed small errors

--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
                 </div>
               </div>
               <ul class="list-group-flush">
-                <li class="list-group-item">221 - Caclulus 1 (Fall 2018)</li>
-                <li class="list-group-item">222 - Caclulus 2 (Spring 2019)</li>
+                <li class="list-group-item">221 - Calculus 1 (Fall 2018)</li>
+                <li class="list-group-item">222 - Calculus 2 (Spring 2019)</li>
                 <li class="list-group-item">234 - Calculus 3 (Fall 2019)</li>
                 <li class="list-group-item">340 - Linear Algebra (Spring 2020)</li>
               </ul>
@@ -399,7 +399,7 @@
                       <li>Eventually find a GiantBomb successor</li>
                     </ul>
                   </p>
-                  <i>Languages Used:</i> C#, XAML, WPF
+                  <i>Language(s) Used:</i> C#, XAML, WPF
                 </li>
                 
               </ul>
@@ -415,9 +415,9 @@
               <ul class="list-group-flush">
                 <li class="list-group-item" id="559">
                   <p>
-                    <strong>Graphics Workbooks</strong>
+                    <strong>Graphics Projects</strong>
                   </p>
-                  <p>In CS559, we have 12 programs that we had to create utilizing JavaScript and THREE.js. These programs allowed us to show mastery in a number of areas, including:</p>
+                  <p>In CS559, we were assigned 12 programs that we had to create utilizing JavaScript. These programs allowed us to show mastery in a number of areas, including:</p>
                   <p>
                     <ul>
                       <li>2D and 3D Transformation Math</li>
@@ -429,7 +429,7 @@
                       <li>Creating Custom Shaders</li>
                     </ul>
                   </p>
-                  <i>Languages Used:</i> JavaScript / THREE.js
+                  <i>Language(s) Used:</i> JavaScript
                 </li>
                 <li class="list-group-item" id="Quizimodo">
                   <p>
@@ -437,7 +437,7 @@
                   </p>
                   <p>This is a group project that was created in CS400, or Programming III. This program reads specific .json files that we referred to as 'quiz banks' and pulls quiz questions, answers, catagories, and images from them. The user can scan an unlimited number of these quiz banks and create a number of custom quizzes from them by specifying the number of total questions wanted and what categories should be present in the quiz.</p>
                   <p>The user also has the ability to write their own quizzes as well. These questions that the user creates can be saved to a .json file upon the program's exit.</p>
-                  <i>Language Used:</i> Java, JavaFX
+                  <i>Language(s) Used:</i> Java, JavaFX
                 </li>
               </ul>
             </div>
