Minor GPA change

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   </div>
 
                   <div class="row">
-                    GPA: 2.9
+                    Cumulative GPA of 2.91 on a 4.0 scale with a major specific GPA of 3.12
                   </div>
                 </div>
                 <div class="p-2">2017 - Anticipated Grad. in 2021</div>
