Updated with info about PixelSort

--- a/index.html
+++ b/index.html
@@ -378,6 +378,36 @@
                 </div>
               </div>
               <ul class="list-group-flush">
+                <li class="list-group-item" id="PixelSort">
+                  <p>
+                    <strong>PixelSort</strong>
+                  </p>
+                  <p>This is a project of mine that I worked on over Winter of 2020. I’ve always been interested by pixel-sorting, so I made an application that allows users to have access to a number of different options to sort user-specified images with. These options include:</p>
+                  <p>
+                  <ul>
+                    <li>Brightness - Evaluates the brightness of each pixel and sorts in order from 0 to 1 (The user is able to manually set the upper and lower bounds for filtering out specific brightness values)</li>
+                    <li>Hue - Goes in the order of Red, Orange, Yellow, Green, Blue, Violet</li>
+                    <li>Saturation - Evaluates the saturation of each pixel and sorts in order from 0 to 1</li>
+                    <li>RGB - Sorts pixels based on the respective amounts of Red, Green, or Blue in the row (whether the program sorts by Reds, Greens, or Blues is specified by the user)</li>
+                    </ul>
+                  </p>
+                  <p>Additional options exist that work in tandem with the selected sorting method:</p> 
+                  <p>
+                    <ul>
+                      <li>Extending - this sorts the image as though it was a single line of pixels</li>
+                      <li>Spiral Sort - this recursively sorts the enclosing perimeter of the image as though it was a singular line before stopping at the middle</li>
+                      <li>Partitioning (Vertical and Horizontal) - this will partition the image by a number of user defined lines. This allows the program to sort each partition as though it were an individual image before stitching everything back together</li>
+                    </ul>
+                  </p>
+                  <p>Some future goals that I have for this project are:</p>
+                  <p>
+                    <ul>
+                      <li>Include rotation</li>
+                      <li>Seed-based sorting</li>
+                    </ul>
+                  </p>
+                  <i>Language(s) Used:</i> C#, XAML, WPF
+                </li>
                 <li class="list-group-item" id="GameShelf">
                   <p>
                     <strong>Game Shelf</strong>
