Added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
 </head>
 
 <header>
@@ -49,9 +48,6 @@
             <a class="dropdown-item" href="#TechnicalKnowledge">Technical Knowledge</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#Experience">Work Experience</a>
-          </li>
-          <li>
             <div class="dropdown-divider"></div>
           </li>
           <li>
@@ -61,7 +57,7 @@
             <a class="dropdown-item" href="#Personal">Personal Projects</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#AssortedCoursework">Madison Coursework</a>
+            <a class="dropdown-item" href="#MadisonCoursework">Madison Coursework</a>
           </li>
           <li>
             <div class="dropdown-divider"></div>
@@ -89,7 +85,7 @@
 </nav>
 </header>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
   <div id="main-container" class="container">
     <div class="container">
       <div class="container" id="Experience">
@@ -434,7 +430,7 @@
                 
               </ul>
             </div>
-            <div class="list-group-item" id="AssortedCourseWork">
+            <div class="list-group-item" id="MadisonCoursework">
               <div class="d-flex">
                 <div class="col">
                   <div class="row bottom-margin">
@@ -495,4 +491,4 @@
     </div>
 </body>
 
-</html>
+</html >
