Added more info on pixelsorting

--- a/index.html
+++ b/index.html
@@ -403,7 +403,50 @@
                     </ul>
                   </p>
                   <i>Language(s) Used:</i> C#, XAML, WPF
-                </li>
+                  <h4 class="row align-items-center justify-content-center top-margin bottom-margin"><strong>Example Images</strong></h4>
+                  <p class="text-center">The original photo was taken by my sister, Amanda! You can find more of her work  <a target="_blank" href="https://hollahart.myportfolio.com/" > here</a>, on her portfolio.</p>
+                  <div class="text-center">
+                  <div class="card-group bottom-margin">
+                    <div class="card bg-light">
+                      <img src="images/Leaf.jpg" class="card-img-top" alt="The Original Photo">
+                      <div class="card-body">
+                        <h5 class="card-title">The Original Photo</h5>
+                      </div>
+                      <div class="card-footer">
+                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                      </div>
+                    </div>
+                    <div class="card bg-light">
+                      <img src="images/BrightBound.jpg" class="card-img-top" alt="Brightness with specified Boundaries applied">
+                      <div class="card-body">
+                        <h5 class="card-title">Brightness with Boundaries Sorting</h5>
+                      </div>
+                      <div class="card-footer">
+                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                      </div>
+                    </div>
+                    <div class="card bg-light">
+                      <img src="images/SpiralPart.jpg" class="card-img-top" alt="Partitions and Spiraling applied">
+                      <div class="card-body">
+                        <h5 class="card-title">Brightness, Spiral, and Partitions Sorting</h5>
+                      </div>
+                      <div class="card-footer">
+                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                      </div>
+                    </div>
+                    <div class="card bg-light">
+                      <img src="images/Hue.jpg" class="card-img-top" alt="Hue sorting applied">
+                      <div class="card-body">
+                        <h5 class="card-title">Hue Sorting</h5>
+                      </div>
+                      <div class="card-footer">
+                        <a href="images/Hue.jpg" target="_blank" class="btn btn-primary">View Image</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+              </li>
                 <li class="list-group-item" id="GameShelf">
                   <p>
                     <strong>Game Shelf</strong>
